--- a/index.html
+++ b/index.html
@@ -9,12 +9,26 @@
     <link rel="stylesheet" href="styles.css">
 
     <link rel="icon" type="image/png" href="favicon.png" />
-	<title>PokeBucks</title>
+    <title>PokeBucks</title>
 
     <style>
       body {
-	    overflow: hidden;
-	  }
+        overflow: hidden;
+      }
+      
+      #click-here-button {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        font-size: 16px;
+        padding: 10px 20px;
+        background-color: #000;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        display: none; /* Hidden by default */
+      }
     </style>
   </head>
 
@@ -29,16 +43,33 @@
     <div id="game-menu-container">
       <img id="pic-circ" src="./assets/prod/other/pic-circ.png" alt="">
       <ul id="game-menu" style="display: none">
-        <li class="active-link"><a class="game-menu-link" href="#">Quest</a></li>
+        <li class="active-link"><a class="game-menu-link" href="#">Play</a></li>
         <li><a class="game-menu-link" href="home.html">Home</a></li>
-        <li><a class="game-menu-link" href="home.html#research">Learning Ground</a></li>
-        <li><a class="game-menu-link" href="home.html#teaching">PokeTest</a></li>
-        <li><a class="game-menu-link" href="home.html#software">PokeStats</a></li>
+        <li><a class="game-menu-link" href="home.html#research">My Stats</a></li>
       </ul>
     </div>
+
+    <!-- Click Here Button -->
+    <a href="/quizpages/q1.html"><button id="click-here-button">
+      Battle!
+    </button></a></body>
+
     <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
     <!--<script src="./index.js" type="module"></script>-->
     <script src="./index.min.js" type="module"></script>
-    <script data-goatcounter="https://arielroffe.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+
+    <script>
+      // Show the "Click Here" button when the player interacts
+      document.addEventListener('pointerdown', function(event) {
+        const button = document.getElementById('click-here-button');
+        button.style.display = 'block';  // Show the button when interaction happens
+      });
+
+      // Button click action (for example, you can hide it after clicking)
+      document.getElementById('click-here-button').addEventListener('click', function() {
+        console.log('Button clicked!');
+        this.style.display = 'none';  // Hide the button after it's clicked (optional)
+      });
+    </script>
   </body>
 </html>
